# Boids_Simulator

./: CMakeLists.txt  Readme.md
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/boids/: CMakeLists.txt  boids.h
src/guiLib/: CMakeLists.txt  application.cpp  application.h  colormap.h  imgui_multiplot.h  shader.cpp  shader.h
src/guiLib/shaders/: basic_lighting.frag  basic_lighting.vert  line-shader.frag  line-shader.vert  texture.frag
